<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	style="@style/Journey_HeaderBackground"
	android:orientation="horizontal"
	>
	<TextView
		style="@style/ListSmallText"
		android:layout_height="wrap_content"
		android:layout_width="0dip"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/journey_Departure"
		android:padding="5dip" />
	<ImageView
		style="@style/TitleBarSeparator" />
	<TextView
		style="@style/ListSmallText"
		android:layout_height="wrap_content"
		android:layout_width="0dip"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/journey_Arrival"
		android:padding="5dip" />
	<ImageView
		style="@style/TitleBarSeparator" />
	<TextView
		style="@style/ListSmallText"
		android:layout_height="wrap_content"
		android:layout_width="0dip"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/journey_Changes"
		android:padding="5dip" />
	<ImageView
		style="@style/TitleBarSeparator" />
	<TextView
		style="@style/ListSmallText"
		android:layout_height="wrap_content"
		android:layout_width="0dip"
		android:layout_weight="1"
		android:gravity="center"
		android:text="@string/journey_Time"
		android:padding="5dip" />
</LinearLayout>
