<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:fillViewport="true"
	>
	<LinearLayout
		style="@style/generalBackground"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		>
	
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:gravity="center"
			android:weightSum="2.0"
			>	
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:gravity="center"
				android:orientation="vertical"
				android:layout_weight="1.0"
				android:layout_marginRight="15dip"
				>
		        <ImageButton
		        	style="@style/Aboutus_logo"
		            android:onClick="onLogoClick"
		            android:layout_height="70dip"
		            android:layout_width="70dip" />
		        <TextView 
		 			style="@style/Aboutus_titletext" 
		 			android:text="@string/main_name"/>
	 		</LinearLayout>
	 		<ImageButton
				style="@style/Aboutus_AppzappyLogoButton"
				android:onClick="onWebsiteButtonClick"
				android:layout_weight="1.0"
				/>
	    </LinearLayout>
	    <View	
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	/>
	   	<TextView 
			style="@style/Aboutus_description" 
			android:text="@string/aboutus_description"
			/>
	    <View	
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	/>
	    
	    <RelativeLayout
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	>
	    	<ImageButton
	    		style="@style/Aboutus_EmailButton"
	    		android:id="@+id/aboutus_emailButton"
	    		android:layout_alignParentTop="true"
	    		android:onClick="onEmailButtonClick"
	            android:layout_height="50dip"
	            android:layout_width="50dip"
	    		/>
	    	<TextView 
	 			style="@style/Aboutus_text"
	 			android:layout_toRightOf="@id/aboutus_emailButton"
	 			android:layout_alignTop="@id/aboutus_emailButton"
	 			android:layout_alignBottom="@id/aboutus_emailButton"
	 			android:text="@string/aboutus_emailTheTeam"
	 			android:onClick="onEmailButtonClick"
				android:clickable="true" />
	    	<ImageButton
	    		style="@style/Aboutus_BugButton"
	    		android:id="@+id/aboutus_bugButton"
	    		android:layout_below="@id/aboutus_emailButton"
	    		android:onClick="onBugButtonClick"
	            android:layout_height="50dip"
	            android:layout_width="50dip"
	    		/>
	    	<TextView 
	 			style="@style/Aboutus_text" 
	 			android:layout_toRightOf="@id/aboutus_bugButton"
	 			android:layout_alignTop="@id/aboutus_bugButton"
	 			android:layout_alignBottom="@id/aboutus_bugButton"
	 			android:text="@string/aboutus_bugReport"
	 			android:onClick="onBugButtonClick"
				android:clickable="true" />
	    	<ImageButton
	    		style="@style/Aboutus_TwitterButton"
	    		android:id="@+id/aboutus_twitterButton"
	    		android:layout_below="@id/aboutus_bugButton"
	    		android:onClick="onTwitterButtonClick"
	            android:layout_height="50dip"
	            android:layout_width="50dip"
	    		/>
	    	<TextView 
	 			style="@style/Aboutus_text" 
	 			android:id="@+id/aboutus_follow_text"
	 			android:layout_toRightOf="@id/aboutus_twitterButton"
	 			android:layout_alignTop="@id/aboutus_twitterButton"
	 			android:layout_alignBottom="@id/aboutus_twitterButton"
	 			android:text="@string/aboutus_followus"
	    		/>
			
	    	<ImageButton
	    		style="@style/Aboutus_FacebookButton"
	    		android:id="@+id/aboutus_facebookButton"
	    		android:layout_toRightOf="@id/aboutus_follow_text"
	    		android:layout_below="@id/aboutus_bugButton"
	    		android:onClick="onFacebookButtonClick"
	    		android:layout_marginLeft="10dip"
	            android:layout_height="50dip"
	            android:layout_width="50dip"
	    		/>
	    </RelativeLayout>
	    <View	
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	/>
	    	
	    <Button
	    	android:layout_width="100dip"
	    	android:layout_height="wrap_content"
	    	android:text="@string/aboutus_close"
	    	android:onClick="closeAboutUs"
	    	/>
	     <View	
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	/>
	    
	    <TextView
	    	style="@style/NormalText"
	    	android:id="@+id/application_details"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" 
            android:gravity="center"
            />
	    <View	
	    	android:layout_width="fill_parent"
	    	android:layout_height="0dip"
	    	android:layout_weight="1"
	    	/>
	   
	</LinearLayout>
</ScrollView>
